<resources>
    <!-- Other -->
    <string name="permission_denied_message">Permission denied</string>
    <string name="background_name">Background.png</string>
    <string name="please_wait">Please, wait…</string>
    <string name="alert_warning">¡Warning!</string>
    <string name="School">school</string>
    <string name="done">Done</string>
    <string name="close">Close</string>
    <string name="alert_error">¡Error!</string>

    <!-- Splash Screen Activity -->
    <string name="app_name">uSchool</string>
    <string name="sign_in">Sign In</string>
    <string name="identification">Identification</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="or">Or</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>

    <!-- sign Up Activity -->
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="repeat_password">Repeat Password</string>

    <!-- School List Activity -->
    <string name="toolbar_search">Search…</string>
    <string name="search">Search</string>
    <string name="compare">Compare</string>
    <string name="empty_content_message">No content to display</string>
    <string name="error_occurred_message">An error has occurred</string>
    <string name="loading_content_message">Loading content…</string>
    <string name="try_again">Try Again</string>

    <!-- Sign Up Activity -->
    <string name="empty_message_field">This field is empty</string>
    <string name="invalid_email_message">The email entered is invalid</string>
    <string name="invalid_phone_number_message">The phone number entered is invalid</string>
    <string name="passwords_do_not_match_message">The passwords do not match, please make sure they are spelled correctly.</string>
    <string name="passwords_do_not_match">The passwords do not match</string>

    <!-- Server Settings Activity -->
    <string name="save">Save</string>
    <string name="host_ip_address">Host ip address</string>
    <string name="connection_port">Connection port</string>
    <string name="port">Port</string>
    <string name="ip">IP</string>
    <string name="server_settings">Server Settings</string>

    <!-- Password Recovery Activity -->
    <string name="password_recovery_message">It seems that you have forgotten your password, recovering it is very simple, just enter your email in the following field and we will send your password to your email.</string>
    <string name="recovery_password">Recovery Password</string>
    <string name="password_recovery_request_email_body">You have requested a request to recover your password, your password is: %s</string>
    <string name="location_permission_request_message">For the data to be shown you must accept the permission</string>
    <string name="address">Address</string>
    <string name="telephone">Telephone</string>
    <string name="settings">Settings</string>
    <string name="municipality">Municipality</string>
    <string name="department">Department</string>
    <string name="attention">Attention</string>
    <string name="calendar">Calendar</string>
    <string name="day">Day</string>
    <string name="nature">Nature</string>
    <string name="grade">Grade</string>
    <string name="contact">Contact</string>
    <string name="link">Link</string>
    <string name="emphasis">Emphasis</string>
    <string name="qualification">Qualification</string>
    <string name="space">Space</string>
    <string name="space_available">Space Available</string>
    <string name="icfes_average">ICFES Average</string>
    <string name="icfes_position">ICFES Position</string>
    <string name="speech_not_supported">Sorry! Your device does not support speech input</string>
</resources>
