<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="?selectableItemBackground"
    android:clickable="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/schoolLogo"
        android:layout_width="@dimen/dp_72"
        android:layout_height="@dimen/dp_72"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        android:transitionName="@string/School" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_toEndOf="@id/schoolLogo"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/schoolName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/labelAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/address"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/address"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/labelTelephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/telephone"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/telephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/address"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/qualification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/address"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/md_divider_thickness"
        android:layout_alignParentBottom="true"
        android:background="@color/md_dark_divider_12" />
</RelativeLayout>