<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_recovery_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arrg.android.app.uschool.view.activity.RecoveryPasswordActivity">

    <include layout="@layout/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5">

                <me.wangyuwei.particleview.ParticleView
                    android:id="@+id/particleView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:transitionName="@string/app_name"
                    app:pv_background_color="@color/transparent_white_percent_95"
                    app:pv_host_text="u"
                    app:pv_host_text_anim_time="0"
                    app:pv_host_text_size="@dimen/splash_screen_text_size"
                    app:pv_particle_text="School"
                    app:pv_particle_text_size="@dimen/splash_screen_text_size"
                    app:pv_spread_anim_time="0"
                    app:pv_text_anim_time="0"
                    app:pv_text_color="@color/colorAccent" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/md_screen_edge_margin_horizontal"
                    android:gravity="center"
                    android:text="@string/password_recovery_message"
                    android:textSize="@dimen/sp_16" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/md_screen_edge_margin_horizontal"
                    android:layout_marginEnd="@dimen/md_screen_edge_margin_horizontal"
                    android:layout_marginStart="@dimen/md_screen_edge_margin_horizontal"
                    android:background="@drawable/input_background">

                    <RelativeLayout
                        android:layout_width="@dimen/input_size_sign_in"
                        android:layout_height="@dimen/input_size_sign_in"
                        android:background="@drawable/input_icon_background">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center"
                            android:contentDescription="@null"
                            android:src="@drawable/ic_email_white_24dp"
                            android:tint="@color/colorPrimary" />
                    </RelativeLayout>

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/input_size_sign_in"
                        android:layout_marginEnd="@dimen/md_screen_edge_margin_horizontal"
                        android:layout_marginStart="@dimen/md_screen_edge_margin_horizontal"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/email"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </LinearLayout>

                <Button
                    android:id="@+id/recoveryPasswordButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_size_sign_in"
                    android:layout_marginEnd="@dimen/md_screen_edge_margin_horizontal"
                    android:layout_marginStart="@dimen/md_screen_edge_margin_horizontal"
                    android:backgroundTint="@color/colorAccent"
                    android:elevation="0dp"
                    android:text="@string/recovery_password"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
